2009-04-07  Michael Banck  <mbanck@gmx.net>

	* src/formats/nwchemformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Fixes PR#2728437.

	* src/formats/moldenformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Closes PR#2737715.

2009-04-06  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp,
	windows-vc2005/OBCommonFormats/OBCommonFormats.vcproj
	windows-vc2005/OBUtilFormats/OBUtilFormats.vcproj:
	remove contamination from experimental version so that compiles again.

2009-06-27  Chris Morley <c.morley@gaseq.co.uk>

	Make parsing of SMILES files stricter, following discussion on
	mailing list.
	* src/formats/smilesformat.cpp(Read Molecule):
	lines starting with # are ignored; lines starting with whitespace
	terminate (except with -e option); illegal chars reported;
	when using OBConversion::Convert(), the components of a SMILES reaction
	are output if it is a valid reaction with non-null reactant and product.
	
	(OBSmilesParser::SmiToMol): the string parameter is made const. This
	simplifies its use, e.g. can use substr. Similar changes would be useful
	elsewhere in OB. 
	 
	* src/formats/rsmiformat.cpp: re-written because of smilesformat changes.
	Now handles multiple reactants and products.

2009-04-21  Chris Morley <c.morley@gaseq.co.uk>
	* data/atomtyp.txt: removed alkalis, alkaline earths,
	In,Tl,Sn,Pb,Sb,Bi from IMPVAL list. (Elements with IMPVAL entries
	are given implicit hydrogens.) Corrects problem Fredrik Wallner
	had with Na.
	Also some others, incl S- to fix #2782327
	
2009-04-21  Chris Morley <c.morley@gaseq.co.uk>

	* src/alias.cpp: Added code to handle isotopic atoms to fix 2777494

2009-04-16  Chris Morley <c.morley@gaseq.co.uk>

	* include/openbabel/reaction.h, src/formats/rsmiformat.cpp,
	src/formats/rxnformat.cpp: add Clear() function for OBReaction and
	apply it via CastAndClear<OBReaction>() in the formats before reading.

2009-03-07  Daniel Leidert <daniel.leidert@wgdd.de>
